htmlファイルの名前とリンクを修正

--- a/manga.html
+++ b/manga.html
@@ -149,12 +149,12 @@
     <div class="container">
         <div id="sidebar">
           <ul>
-            <li><a href="シャケフラ(イ)宣言.html">ニッキ</a></li>
+            <li><a href="index.html">ニッキ</a></li>
             <li>
             <details>
             <summary class="menu-summary">マンガ</summary>
             <ul style="padding-left: 15px;">
-              <li><a href="マンガ.html#new">ニュー</a></li>
+              <li><a href="manga.html#new">ニュー</a></li>
               <li><a href="#mangawatashi">ワタシ</a></li>
             </ul>
             </details>
