著者近影を追加

--- a/manga.html
+++ b/manga.html
@@ -155,7 +155,7 @@
             <summary class="menu-summary">マンガ</summary>
             <ul style="padding-left: 15px;">
               <li><a href="manga.html#new">ニュー</a></li>
-              <li><a href="#mangawatashi">ワタシ</a></li>
+              <li><a href="watashi.html">ワタシ</a></li>
             </ul>
             </details>
             </li>
