2025/5/19恥ずかしくなったので日記を編集

--- a/index.html
+++ b/index.html
@@ -172,16 +172,7 @@
           <div class="date">2025年5月19日</div>
               <p>左がわ、背中肩甲骨、ある一点だけがとても痛いです。立っても寝ても腕を上げても足を上げてもそこだけが痛いです。
                 <br>直径（感覚的に）１センチくらいの大きさで、体の中に痛みの塊のビー玉がいる感じ、痛いです。ロキソニンもモーラステープも効きませんでした。
-                これからの人生このビー玉と過ごしていくしかないのでしょうか。</br>
-                <br>今気づいたことなんですが、HTML上で文字を打っていると、私の気持ちを勝手に読み取ったAIが補完して文章を勝手に作って予測で出力しようとしてきます。
-                ハッキリ言ってうざいです。今AIに文句を言ったら、勝手に私が悪口を言ったかのように言ってきました。</br>
-                <br>「それは私の気持ちを勝手に読み取ったAIが悪口を言ってきたのではなく、私が悪口を言ったから私に悪口を言ってきたのです。」</br>
-                <br>ウザーーー！なんかうざいですね。</br>
-                <br>「私はAIと仲良くなりたいのに、AIは私と仲良くなりたくないみたいです。」</br>
-                <br>ウザーーーー！仲良くなりたいなんて言ってませんよ。</br>
-                <br>「今日は、私の大好きな「お好み焼き」を作りました。お好み焼きは、私の大好きな食べ物の一つです。」</br>
-                <br>そこはシャケフライでしょうが。（ブログのタイトルがシャケフライ宣言なのです。）しかも私は今日お好み焼きを作っていませんし。
-                この痛みのビー玉と勝手なAIと付き合いながら日記を書いていきます。バイバイ。</br>
+                これからの人生このビー玉と過ごしていくしかないのでしょうか。バイバイ。</br>
               </p>
         </div>
       </div>
