2025/6/11:なんか保存

--- a/manga.html
+++ b/manga.html
@@ -163,7 +163,7 @@
             <details>
             <summary class="menu-summary">シャケ</summary>
             <ul style="padding-left: 15px;">
-              <li><a href="#vlog3">グ</a></li>
+              <li><a href="gu.html">グ</a></li>
             </ul>
             </details>
             </li>
