2025/6/18:日記、６月の項目を追加

--- a/index.html
+++ b/index.html
@@ -138,7 +138,15 @@
     <div class="container">
       <div id="sidebar">
         <ul>
-          <li><a href="index.html">ニッキ</a></li>
+          <li>
+            <details>
+              <summary class="menu-summary">ニッキ</summary>
+              <ul style="padding-left: 15px;">
+                <li><a href="index.html">2025/5</a></li>
+                <li><a href="6gatu.html">2025/6</a></li>
+              </ul>
+            </details>
+          </li>
           <li>
             <details>
               <summary class="menu-summary">マンガ</summary>
