--- a/manga.html
+++ b/manga.html
@@ -149,24 +149,32 @@
     <div class="container">
         <div id="sidebar">
           <ul>
-            <li><a href="index.html">ニッキ</a></li>
             <li>
             <details>
-            <summary class="menu-summary">マンガ</summary>
-            <ul style="padding-left: 15px;">
-              <li><a href="manga.html#new">ニュー</a></li>
-              <li><a href="watashi.html">ワタシ</a></li>
-            </ul>
+              <summary class="menu-summary">ニッキ</summary>
+              <ul style="padding-left: 15px;">
+                <li><a href="index.html">2025/5</a></li>
+                <li><a href="6gatu.html">2025/6</a></li>
+              </ul>
             </details>
-            </li>
-            <li>
+          </li>
+          <li>
             <details>
-            <summary class="menu-summary">シャケ</summary>
-            <ul style="padding-left: 15px;">
-              <li><a href="gu.html">グ</a></li>
-            </ul>
+              <summary class="menu-summary">マンガ</summary>
+              <ul style="padding-left: 15px;">
+                <li><a href="manga.html#new">ニュー</a></li>
+                <li><a href="watashi.html">ワタシ</a></li>
+              </ul>
             </details>
-            </li>
+          </li>
+          <li>
+            <details>
+              <summary class="menu-summary">シャケ</summary>
+              <ul style="padding-left: 15px;">
+                <li><a href="gu.html">グ</a></li>
+              </ul>
+            </details>
+          </li>
           </ul>
         </div>
 
